[gd_scene load_steps=2 format=2]

[ext_resource path="res://_NonMainGameRelateds/_Master/Master.gd" type="Script" id=1]

[node name="Master" type="Node"]
script = ExtResource( 1 )

[node name="GameElementsContainer" type="Node" parent="."]

[node name="LayoutSelectionContainer" type="Node" parent="."]

[node name="HUDContainer" type="Control" parent="."]
mouse_filter = 2

[node name="TransitionContainer" type="CanvasLayer" parent="."]
